[gd_scene load_steps=4 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/CameraController.gd" id="2_camera"]
[ext_resource type="Script" path="res://scripts/Minimap.gd" id="3_minimap"]

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.433, 0.25, 0, 0.5, 0.866, -0.5, -0.75, 0.433, 50, 100, 50)
light_energy = 1.2
shadow_enabled = true

[node name="CameraController" type="Node3D" parent="."]
script = ExtResource("2_camera")

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 80, 80)
fov = 50.0
near = 0.1
far = 500.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 500.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 28
text = "This Bitter Ground"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 14
text = "Rust ECS Backend | Godot 4 Frontend"

[node name="TickLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
text = "Tick: 0 | Time: 0.0s"

[node name="ViewModeLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 14
horizontal_alignment = 2
text = "View: TACTICAL | Zoom: MID"

[node name="SelectionLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -30.0
theme_override_font_sizes/font_size = 14
text = "No selection"

[node name="HelpLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = 600.0
offset_bottom = -5.0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "WASD: Pan | Scroll: Zoom | Tab/1-3: View | LMB: Select | RMB: Move | B: Barrage | C: Crater"

[node name="Minimap" type="Control" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -20.0
script = ExtResource("3_minimap")

[sub_resource type="Environment" id="Environment_env"]
background_mode = 1
background_color = Color(0.15, 0.18, 0.22, 1)
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.45, 0.5, 1)
ambient_light_energy = 0.5
